kubernetes/ingress-rules/argocd-proxy.yaml
---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argo
  namespace: argocd

spec:
  virtualhost:
    fqdn: argo.thinksnow.ru
  routes:
    - conditions:
      - prefix: /
      services:
        - name: argocd-server
          port: 443

...
