kubernetes/ingress-rules/httpproxy-rules.yaml
---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic1

spec:
  virtualhost:
    fqdn: kube.thinksnow.ru
  routes:
    - conditions:
      - prefix: /
      services:
        - name: frontend
          port: 80
    - conditions:
      - prefix: /api/figalize
      services:
        - name: figalize
          port: 80
    - conditions:
      - prefix: /api/getschemas
      services:
        - name: figalize
          port: 80
    - conditions:
      - prefix: /api/append
      services:
        - name: history
          port: 80
    - conditions:
      - prefix: /api/gethistory
      services:
        - name: pull
          port: 8010

...
