kubernetes/ingress-rules/ingress-rules.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: kube.thinksnow.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80
  ingressClassName: nginx

...
