kubernetes/ingress-rules/rules.yaml
---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic

spec:
  virtualhost:
    fqdn: kube.thinksnow.ru
  routes:
    - conditions:
      - prefix: /
      services:
        - name: front
          port: 80
         
...
